--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "abysmal-api",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -22,6 +22,6 @@
     "nekos.life": "^3.0.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.14"
+    "eslint": "^8.26.0"
   }
 }
